--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -205,6 +205,7 @@ a{
     font-weight: bold;
 }
 .close_modal_line{
+    position: relative;
     width: 100%;
     height: 80px;
     padding: 20px 20px;
@@ -1047,6 +1048,7 @@ input:not(.input_payment){
 
 .modal_block{
     width: 100%;
+    min-height: 100%;
     height: 100%;
     position: absolute;
     top: 0px;
@@ -1148,8 +1150,7 @@ input:not(.input_payment){
 .modal_prod_info{
     width: 100%;
     max-width: 1200px;
-    height: 100%;
-    max-height: 900px;
+    height: 95%;
     background-color: white;
 }
 .body_pr_info{
@@ -1159,6 +1160,7 @@ input:not(.input_payment){
     box-sizing: border-box;
     margin-top: -50px;
     display: flex;
+    overflow: auto;
 }
 .pr_info_left{
     width: 55%;
@@ -1609,8 +1611,10 @@ input[type='file']{
         padding: 0px;
     }
     .close_modal_line{
+        position: absolute;
+        z-index: 1000;
         justify-content: center;
-        height: 70px;
+        height: 100px;
         padding: 0px;
         color: white;
         background-color: #1d1d1d;
@@ -1696,8 +1700,10 @@ input[type='file']{
     }
 
     .body_pr_info{
+        height: 1000px;
         flex-direction: column;
         padding: 20px;
+        overflow-y: scroll;
     }
     .pr_info_left{
         width: 100%;
@@ -1712,7 +1718,8 @@ input[type='file']{
         margin: 0px;
     }
     .modal_block{
-        height: a;
+        min-height: 100%;
+        height: 100%;
         overflow-y: auto;
     }
     .pr_info_foto{
@@ -1746,12 +1753,15 @@ input[type='file']{
         margin-right: 20px;
     }
     .modal_prod_info{
-        height: 1000px;
+        height: auto;
     }
     .filter_block{
         display: none;
     }
     .close_modal_line{
+        position: absolute;
+        background-color: rebeccapurple;
+        z-index: 1000;
         padding: 0px;
         margin-bottom: 10px;
         height: 80px;
@@ -1762,6 +1772,8 @@ input[type='file']{
         margin-bottom: 10px;
     }
     .close_elips{
+        position: relative;
+        z-index: 100000;
         width: 20px;
         height: 20px;
         font-size: 20px;
